# FromSoftware-Rust-Library

./: Cargo.toml
crates/eldenring/src/dlut/: reference_pointer.rs
crates/eldenring/src/ez_state/: shared_string.rs  value.rs
examples/: README.md
examples/20260411-spawn-items/: Cargo.toml
examples/20260411-spawn-items/src/: lib.rs
examples/20260411-spawn-shit/: Cargo.toml
examples/20260411-spawn-shit/src/: lib.rs
examples/20260425-hot-randomizer/: Cargo.toml
examples/20260425-hot-randomizer/src/: config.rs  lib.rs  log.rs  parts_randomizer.rs  spell_randomizer.rs  weapon_debug_pool.rs  weapon_pools.rs  weapon_randomizer.rs
examples/20260510-spawn-blaster/: Cargo.toml
examples/20260510-spawn-blaster/src/: lib.rs
examples/20260614-scale-randomizer/: Cargo.toml
examples/20260614-scale-randomizer/src/: config.rs  lib.rs
examples/20260614-weapon-randomizer-bom/: Cargo.toml
examples/20260614-weapon-randomizer-bom/src/: config.rs  lib.rs  log.rs  weapon_pools.rs  weapon_randomizer.rs
examples/apply-speffect/src/: lib.rs
examples/debug-line/src/: lib.rs
examples/invoke-esd/src/: lib.rs
examples/present-action-button/src/: lib.rs
