[package]
name = "hot-randomizer"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
fromsoftware-shared.workspace = true
eldenring.workspace = true
rand = "0.9"
serde.workspace = true
toml.workspace = true
windows = { workspace = true, features = ["Win32_System_SystemInformation", "Win32_System_Diagnostics_Debug", "Win32_UI_WindowsAndMessaging"] }

[lib]
crate-type = ["cdylib"]
